--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,6 +9,7 @@
     tools:context=".SplashActivity">
 
     <Button
+        android:id="@+id/bt_normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onNormalClick"
@@ -18,4 +19,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.8" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_normal"
+        android:onClick="onFunClick"
+        android:text="娱乐模式"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bt_normal" />
 </androidx.constraintlayout.widget.ConstraintLayout>
