--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,39 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/et_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="请输入当前明星的名字"
-        app:layout_constraintEnd_toStartOf="@id/bt_name_sure"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/bt_name_sure"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="确认"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_fun"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="et_name, bt_name_sure" />
-
     <com.haomini.mineclearance.widget.MineClearanceView
         android:id="@+id/mcl_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_normal"
-        app:layout_constraintTop_toBottomOf="@id/et_name" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-
         android:id="@+id/tv_replay"
         android:layout_width="100dp"
         android:layout_height="0dp"
@@ -57,6 +32,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
+        android:inputType="number"
         android:id="@+id/et_num"
         android:layout_width="0dp"
         android:layout_height="0dp"
